# aquaforum-ai

./: .env.example  .gitignore  README.md  package-lock.json  package.json  railway.json
.claude/: launch.json  settings.local.json
apps/api/: Dockerfile  nixpacks.toml  pyproject.toml  start.sh
apps/api/app/: config.py  main.py
apps/api/app/engine/: graph.py  llm.py  nodes.py  prompts.py  routing.py  runner.py  state.py
apps/api/app/models/: schemas.py
apps/api/app/routers/: forum.py
apps/api/app/services/: export.py  supabase_client.py  tts.py
apps/web/: next.config.ts  package.json  vercel.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/forum/[sessionId]/: page.tsx
apps/web/src/app/setup/: page.tsx
apps/web/src/components/: agent-badge.tsx  analysis-panel.tsx  audio-player.tsx  debate-insights.tsx  demo-mockup.tsx  insight-card.tsx  live-debate-stage.tsx  message-bubble.tsx  pipeline-display.tsx  typing-indicator.tsx  water-particles.tsx
apps/web/src/hooks/: use-forum-realtime.ts
apps/web/src/lib/: api.ts  supabase.ts
apps/web/src/store/: forum-store.ts
